# meal-planner

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  chat-history.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.example.toml
data/: factor-catalog.json  ingredient-categories.json  journey.json  products.json  profile.json  spending.json  weight.json
data/plans/: manifest.json
data/plans/2026/: W07.json  W08.json  W09-draft.json  W09.json  W10.json  W11.json  W12.json
data/receipts/: AH_kassabon_2026-01-10 184300_1011.txt  AH_kassabon_2026-01-16 130500_5861.txt  AH_kassabon_2026-01-16 154800_1502.txt  AH_kassabon_2026-01-17 120000_1011.txt  AH_kassabon_2026-01-18 174200_1162.txt  AH_kassabon_2026-01-22 153100_1011.txt  AH_kassabon_2026-01-23 160300_1011.txt  AH_kassabon_2026-01-23 174700_5833.txt  AH_kassabon_2026-01-27 161000_1011.txt  AH_kassabon_2026-01-27 173600_1011.txt  AH_kassabon_2026-01-29 160400_2236.txt  AH_kassabon_2026-01-30 201200_2236.txt  AH_kassabon_2026-02-01 155900_2217.txt  AH_kassabon_2026-02-02 144500_1391.txt  AH_kassabon_2026-02-06 131200_1011.txt  AH_kassabon_2026-02-06 185100_1011.txt  AH_kassabon_2026-02-10 162500_1011.txt  AH_kassabon_2026-02-12 090800_1011.txt  AH_kassabon_2026-02-13 161300_1011.txt  AH_kassabon_2026-02-13 170300_1011.txt  AH_kassabon_2026-02-15 162900_2217.txt  analysis.md  cost_calculator.py  gsheet_w01_w02.csv  weekly_estimates.md
