[project]
name = "meal-planner"
version = "0.1.0"
description = "Weekly meal plan dashboard with weight tracking"
requires-python = ">=3.11"
dependencies = [
    "gspread>=6.0.0",
    "plotly>=6.5.2",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
